# tiny-secp256k1

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  Dockerfile  Makefile  binding.gyp  bundle.js  package-lock.json  package.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json
.github/workflows/: ci.yaml
benches/: fixtures.js  index.js  package-lock.json  package.json
examples/: README.md
examples/random-in-node/: index.js  package-lock.json  package.json
examples/react-app/: index.js
lib/: addon.js  api.js  index.browser.js  index.js  rand.browser.js  secp256k1.js  secp256k1.node.js  validate.js  validate_wasm.js  wasm.js  wasm_loader.js  wasm_rand.web.js
scripts/: Makefile  shared.hpp
secp256k1/: Cargo.toml
secp256k1-node/: Cargo.toml
secp256k1-node/src/: lib.rs
secp256k1-sys/: Cargo.toml  build.rs
secp256k1-sys/src/: lib.rs
secp256k1-wasm/: Cargo.toml
secp256k1-wasm/src/: lib.rs
secp256k1/src/: lib.rs
src_ts/: addon.ts  api.ts  rand.browser.ts  wasm_loader.browser.ts  wasm_loader.ts
tests/: addon-exists.js  browser.html  browser.webpack.js  ecdsa.js  index.js  points.js  privates.js  util.js
util/: addon-target-name.js  on-install.js  update-package-json.js
